# rules_backstage

./: DESIGN.md  MODULE.bazel  README.md  defs.bzl
.github/workflows/: ci.yml
config/: BUILD.bazel  backstage-values.yaml
examples/: README.md  app_config_override.yaml  catalog_info.yaml  cnpg_compose.md
private/manifests/: BUILD.bazel  backstage.yaml
tests/: BUILD.bazel  analysis_tests.bzl  health_wrapper.sh  install_wrapper.sh  smoke_test.sh
tests/fixtures/: smoke-component.yaml
tools/: BUILD.bazel  extensions.bzl  render_backstage.sh  repositories.bzl  versions.bzl
