"""Tests for rules_backstage.

- Analysis test verifies the macro instantiates cleanly.
- Smoke composition: kind cluster + Backstage (single Deployment +
  chart-bundled PostgreSQL StatefulSet). Smoke `kubectl run`s a
  curl pod, POSTs a Location to /api/catalog/locations pointing at
  tests/fixtures/smoke-component.yaml (Backstage fetches via its
  `url` reader), then polls /api/catalog/entities until the entity
  shows up. Both calls carry static-token Bearer auth. Proves
  Backstage backend + Postgres + catalog plugin write+read paths +
  service-to-service auth end-to-end.
"""

load("@rules_backstage//:defs.bzl", "backstage_health_check", "backstage_install")
load("@rules_itest//:itest.bzl", "itest_service", "service_test")
load("@rules_kind//:defs.bzl", "kind_cluster", "kind_health_check")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load(":analysis_tests.bzl", "backstage_install_test_suite")

# ---- analysis ---------------------------------------------------------------

backstage_install_test_suite(name = "backstage_install_analysis")

# ---- smoke composition ------------------------------------------------------

kind_cluster(name = "cluster", k8s_version = "1.32")
kind_health_check(name = "cluster_health", cluster = ":cluster")
itest_service(
    name = "kind_svc",
    exe = ":cluster",
    health_check = ":cluster_health",
    tags = ["manual"],
)

backstage_install(
    name = "backstage_install_bin",
    tags = ["manual"],
)

backstage_health_check(
    name = "backstage_health_bin",
    tags = ["manual"],
)

sh_binary(
    name = "backstage_install_wrapper",
    srcs = ["install_wrapper.sh"],
    data = [":backstage_install_bin"],
)

sh_binary(
    name = "backstage_health_wrapper",
    srcs = ["health_wrapper.sh"],
    data = [":backstage_health_bin"],
)

itest_service(
    name = "backstage_svc",
    exe = ":backstage_install_wrapper",
    deps = [":kind_svc"],
    health_check = ":backstage_health_wrapper",
    tags = ["manual"],
)

sh_test(
    name = "smoke_test_bin",
    srcs = ["smoke_test.sh"],
    tags = ["manual"],
)

service_test(
    name = "smoke_test",
    services = [":backstage_svc"],
    test = ":smoke_test_bin",
    tags = [
        "manual",
        "no-sandbox",
        "requires-network",
    ],
)
