"""Maintainer-only render flow."""

load("@rules_helm//:defs.bzl", "helm_template")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

# ---- 2.6.3 ------------------------------------------------------------------

helm_template(
    name = "render_backstage_2_6_3",
    chart = ["@backstage_chart_2_6_3//:files"],
    values = ["//config:backstage-values.yaml"],
    namespace = "backstage",
    release_name = "backstage",
)

sh_binary(
    name = "render_writeback_2_6_3",
    srcs = ["writeback.sh"],
    data = [":render_backstage_2_6_3"],
    args = [
        "$(rootpath :render_backstage_2_6_3)",
        "private/manifests/backstage.yaml",
    ],
    visibility = ["//visibility:public"],
)
